added unit tests for Inventory handler

--- a/seminar3/.vscode/settings.json
+++ b/seminar3/.vscode/settings.json
@@ -3,5 +3,7 @@
         "src",
         "test"
     ],
-    "java.project.referencedLibraries": []
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar"
+    ]
 }
